--- a/loadbalancer/nginx.conf
+++ b/loadbalancer/nginx.conf
@@ -9,6 +9,13 @@ http {
          location / {
               proxy_pass http://backends/;
          }
+        #  location /ws/ {
+        #       proxy_pass http://backends/;
+        #       proxy_http_version 1.1;
+        #       proxy_set_header Upgrade $http_upgrade;
+        #       proxy_set_header Connection "upgrade";
+        #       proxy_set_header Host $host;
+        #  }
     }
 }
 
